2008-04-10  Andy Wingo  <wingo@unquote>

	* == Released guile-gnome-platform version 2.15.97 ==

2008-04-10  Andy Wingo  <wingo@unquote>

	* NEWS: Update NEWS.

2007-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/libgnomecanvas-support.c ("guile-gnome-scm-to-canvas-points"):
	Compile fix.

2008-04-08  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgnomecanvas-support.c
	(_wrap_gnome_canvas_points_new): Use scm_c_gvalue_new_take_boxed.

2007-12-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.96 ==

2007-12-08  Andy Wingo  <wingo@pobox.com>

	* tests/wrapset.api: Updated.

	* doc/undocumented.texi (Undocumented):
	* doc/defuns-gnome-canvas-util.xml.texi: Regenerated.

	* gnome/overrides/libgnomecanvas.defs: Don't wrap
	gnome-canvas-points-copy, it's unnecessary. Don't provide a custom
	canvas-points-new, that's taken care of by the foo in
	canvas-spec.scm.

	* gnome/gw/canvas-spec.scm (initialize): Wrap
	<gnome-canvas-points> properly.

	* examples/canvas.scm: Update to use (oop goops), to work around
	lack of path-def generics, and to use the proper SCM
	representation for <gnome-canvas-points>.

2007-12-06  Andy Wingo  <wingo@pobox.com>

	* tests/wrapset.api: Update for API removal.

	* gnome/canvas.scm (<gnome-canvas-path-def>, moveto, curveto)
	(lineto, closepath, reset, set-path-def, get-path-def):
	Unfortunately, now that we wrap <gnome-canvas-path-def> properly,
	we can't have these convenient generics, because
	<gnome-canvas-path-def> is a <gvalue> class. If this is to be
	fixed, it should be fixed in the core. Removing these manual
	wrappers.

	* doc/defuns-*.texi: Regenerated.

	* doc/guile-gnome-libgnomecanvas.texi (Top): 
	* doc/undocumented.texi: New section for undocumented exports.

2007-11-30  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/libgnomecanvas.defs: Mark GnomeCanvasPathDef as
	a boxed, and ignore functions dealing in libart types.

2007-11-10  Andy Wingo  <wingo@pobox.com>
